fix video resize on mobile

--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ ul li::before {
 
 video {
 	display: block;
+	max-width: 100%;
 
 	margin-right: auto;
 	margin-left: auto;
